# MOVE3

./: .gitignore  Bulletin17c_example.py  ISB_Rain_MultipleNday.py  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  requirments-dev.txt  setup.py  ui_move.py  version.py  zenodo.json
.github/workflows/: python-publish.yml
core/: MOVE.py  __init__.py  move1.py  move3.py
data/: Etowah.csv  Isabella_seasonality_frequency_analysis.csv  Isabella_seasonality_frequency_analysis.xlsx  Kern_Bkr_seasonality_frequency_analysis.csv  Kern_Bkr_seasonality_frequency_analysis.xlsx  MOVE1_testData.dss  Suwanee.csv
examples/: Bulletin17c_example.py
move3/core/: move1.py  move3.py
move3/data/: MOVE1_testData.feather  move1_extended_data.feather
move3/test/: test.py
test/: test.py
