[project]
name = "move3"
version = "0.8.0"
description = "MOVE1 and MOVE3 record extension utilities"
authors = [
    {name = "Daniel Hamill",email = "hamill.daniel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "numpy (==1.23.4)",
]

[tool.poetry]

[tool.poetry.group.example.dependencies]
altair = "^4.2.0"
pandas = "1.5.1"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
